# signalrgb-python

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  404.html  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  signalrgb-cli.py
.circleci/: config.yml
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  publish.yml  release.yml
api/client/: index.html
api/models/: index.html
async_usage/: index.html
contributing/: index.html
development/: index.html
docs/: async_usage.md  contributing.md  development.md  index.md  installation.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  silkcircuit.css
docs/api/: client.md  models.md
docs/guide/: contributing.md  development.md  index.md  installation.md  quick-start.md
docs/reference/: async.md  cli.md  library.md  models.md
docs/source/: api.rst  cli.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
docs/usage/: cli.md  library.md
examples/: async_example.py  effect_cycler.py
installation/: index.html
scripts/: release.py  release.sh
search/: search_index.json
signalrgb/: __init__.py  async_client.py  cli.py  client.py  constants.py  exceptions.py  model.py
tests/: test_async_client.py  test_cli.py  test_client.py  test_model.py
tests/data/: effect.json  effect_list.json  error.json
usage/cli/: index.html
