[tool.poetry]
name = "signalrgb"
version = "0.9.0"
description = "A Python client for SignalRGB"
authors = ["Stefanie Jane <stef@hyperbliss.tech>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
rich = "^13.7.1"
typer = "^0.12.3"
ruff = "^0.5.4"
pre-commit = "^3.7.1"
types-requests = "^2.32.0.20240712"
mashumaro = "^3.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.29"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mypy = "^1.11.0"
pytest-cov = "^5.0.0"
types-setuptools = "^71.1.0.20240724"

[tool.pytest.ini_options]
addopts = "--cov=signalrgb --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["signalrgb"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
signalrgb = "signalrgb.cli:app"
