[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalrgb"
version = "1.0.1"
description = "A Python client library and CLI for controlling SignalRGB Pro"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "Stefanie Jane", email = "stef@hyperbliss.tech" }]
keywords = ["signalrgb", "rgb", "lighting", "api", "client", "cli", "async", "httpx"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "rich>=14.0",
    "typer>=0.16",
    "mashumaro>=3.16",
]

[project.urls]
Homepage = "https://github.com/hyperb1iss/signalrgb-python"
Documentation = "https://hyperb1iss.github.io/signalrgb-python/"
Repository = "https://github.com/hyperb1iss/signalrgb-python"
Issues = "https://github.com/hyperb1iss/signalrgb-python/issues"

[project.scripts]
signalrgb = "signalrgb.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.2",
    "ruff>=0.15",
    "ty>=0.0.26",
    "pre-commit>=4.2",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
]

# ============================================================================
# Hatch Build Configuration
# ============================================================================

[tool.hatch.build.targets.wheel]
packages = ["signalrgb"]

[tool.hatch.build.targets.sdist]
include = [
    "/signalrgb",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# ============================================================================
# Ruff — Linting & Formatting
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["signalrgb", "tests"]
extend-exclude = [".venv", "docs", "site"]

[tool.ruff.lint]
select = [
    # Core Python
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "RUF",   # Ruff-specific
    # Testing
    "PT",    # flake8-pytest-style
    # Code quality
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "BLE",   # flake8-blind-except
    "DTZ",   # flake8-datetimez
    "G",     # flake8-logging-format
    "ICN",   # flake8-import-conventions
    "PGH",   # pygrep-hooks
    "PIE",   # flake8-pie
    "PL",    # Pylint
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "S",     # flake8-bandit
    "SLF",   # flake8-self
    "TRY",   # tryceratops
    "COM",   # flake8-commas
    "ERA",   # eradicate (commented code)
    "T20",   # flake8-print
    "ARG",   # flake8-unused-arguments
]

ignore = [
    # Formatter conflicts
    "E501",   # Line too long (formatter handles it)
    "COM812", # Missing trailing comma (conflicts with formatter)
    "ISC001", # Single line implicit string concatenation

    # Complexity — this project has naturally wide method surfaces
    "C901",    # Function too complex
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value in comparison

    # Stylistic preferences
    "RUF012", # Mutable class attributes as ClassVar
    "SIM102", # Nested if-statements (sometimes clearer)
    "SIM108", # Use ternary (often less readable)

    # Exception handling — we consistently chain with `from e` or reraise
    "TRY003", # Long exception messages
    "TRY300", # Move return to else block
    "TRY301", # Abstract raise to inner function
    "TRY401", # Redundant exception in logging.exception

    # Return-style
    "RET502", # Implicit return None
    "RET503", # Missing explicit return
    "RET505", # elif after return

    # Logging & typing noise
    "G004",   # f-strings in logging
    "PGH003", # Unspecific type: ignore

    # Security exceptions — all assert usage is in tests
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"signalrgb/__init__.py" = ["F401", "E402"]
"signalrgb/cli.py" = [
    "B008",   # Typer requires function calls in argument defaults
    "PLW0603", # CLI holds FULL_RGB_MODE in module state
]
"tests/**/*.py" = [
    "ARG001",  # Unused fixture args
    "ARG002",  # Unused fixture args
    "ARG005",  # Unused lambda args
    "BLE001",  # Allow broad except in tests
    "DTZ001",  # Naive datetimes fine in tests
    "PIE790",  # Allow `pass` in mocks
    "PLR2004", # Magic numbers in tests
    "PT018",   # Complex assertions
    "PT019",   # Unused fixtures
    "RET504",  # Unnecessary assignment before return
    "S105",    # Hardcoded passwords are just test data
    "S106",
    "S108",    # Temp file usage in tests
    "SLF001",  # Private member access in tests
]
"examples/**/*.py" = [
    "ASYNC250", # Demo scripts with interactive input() in async context
    "T20",      # print is expected in examples
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["signalrgb"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

# ============================================================================
# ty — Type Checking (Astral's Rust type checker)
# ============================================================================

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["signalrgb"]
exclude = ["docs", "site", "examples"]

[tool.ty.rules]
# Pragmatic defaults — warn on things we want to fix over time but don't
# block on them yet. Tighten as the codebase is cleaned up.
possibly-unresolved-reference = "warn"

[[tool.ty.overrides]]
include = ["tests/**", "**/test_*.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
possibly-unresolved-reference = "ignore"

# ============================================================================
# Pytest
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=signalrgb",
    "--cov-report=term-missing",
]

# ============================================================================
# Coverage
# ============================================================================

[tool.coverage.run]
source = ["signalrgb"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]
show_missing = true
